--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     </div>
         <!-- 在 </body> 標籤前添加以下 JavaScript 代碼 -->
     <script>
-        const API_URL = 'http://localhost:3000'; // 請改為您的後端 API 地址
+        const API_URL = 'const API_URL = 'https://spectacular-wholesale-sprint.glitch.me'; // 請改為您的後端 API 地址
 
         // 頁面加載完成後自動執行
         document.addEventListener('DOMContentLoaded', () => {
