--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TRON USDT 管理面板</title>
+    <title>米奇發發發 USDT 管理面板</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -200,7 +200,7 @@
     </div>
         <!-- 在 </body> 標籤前添加以下 JavaScript 代碼 -->
     <script>
-        const API_URL = 'const API_URL = 'https://spectacular-wholesale-sprint.glitch.me'; // 請改為您的後端 API 地址
+        const API_URL = 'const API_URL = 'https://spectacular-wholesale-sprint.glitch.me/'; // 請改為您的後端 API 地址
 
         // 頁面加載完成後自動執行
         document.addEventListener('DOMContentLoaded', () => {
