--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TRON USDT 管理面板</title>
+    <title>米奇發發發 USDT 管理面板</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -91,7 +91,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="mb-4 text-center">TRON USDT 管理面板</h1>
+        <h1 class="mb-4 text-center">米奇發發發 USDT 管理面板</h1>
         
         <!-- 数据信息显示 -->
         <div id="dataInfo" class="data-info text-center">
