--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <script>
         // 全局變量
         let token = localStorage.getItem('token');
-        const API_BASE_URL = 'https://spectacular-wholesale-sprint.glitch.me/'; // 如果前後端在同一域名下，可以留空
+        const API_BASE_URL = 'https://spectacular-wholesale-sprint.glitch.me'; // 如果前後端在同一域名下，可以留空
         let transferModal;
         let currentTransferWallet = '';
 
